Update to Paper 1.20.1